@@ -746,8 +746,7 @@ class movies:
 
             try:
                 artmeta = True
-                if self.fanart_tv_user == '': raise Exception()
-           
+                #if self.fanart_tv_user == '': raise Exception()           
                 art = client.request(self.fanart_tv_art_link % imdb, headers=self.fanart_tv_headers, timeout='10', error=True)
                 try: art = json.loads(art)
                 except: artmeta = False
