@@ -31,8 +31,7 @@ class source:
         self.priority = 1
         self.language = ['de']
         self.domains = ['streamflix.org']
-        self.base_link = 'https://www.rulu.co/'
-        #self.base_link = 'https://streamflix.org/'
+        self.base_link = 'https://streamflix.to/'
         self.search_link = '/api/searchAutoComplete?locale=de&q=%s'
         self.get_links = '/api/getLinks'
         self.get_episodes = '/api/getEpisode'
