@@ -32,7 +32,7 @@ class source:
         self.language = ['en']
         self.domains = ['streamlord.com']
         self.base_link = 'http://www.streamlord.com'
-        self.search_link = '/search2.php'
+        self.search_link = '/searchtest.php'
         self.user = control.setting('streamlord.user')
         self.password = control.setting('streamlord.pass')
 
@@ -100,7 +100,7 @@ class source:
 
                 query = urlparse.urljoin(self.base_link, self.search_link)
 
-                post = urllib.urlencode({'searchapi': title})
+                post = urllib.urlencode({'searchapi2': title})
 
                 r = client.request(query, post=post, headers=headers)
 
@@ -115,9 +115,10 @@ class source:
                 r = [i for i in r if cleantitle.get(title) == cleantitle.get(i[1])]
                 r = [i[0] for i in r][0]
 
-                r = urlparse.urljoin(self.base_link, r)
-
-                r = client.request(r, headers=headers)
+                u = urlparse.urljoin(self.base_link, r)
+                for i in range(3):
+                    r = client.request(u, headers=headers)
+                    if not 'failed' in r: break
 
                 if 'season' in data and 'episode' in data:
                     r = re.findall('(episode-.+?-.+?\d+.+?\d+-\d+.html)', r)
@@ -150,9 +151,11 @@ class source:
                 url = url.replace('"', '').replace(',', '').replace('\/', '/')
                 url += '|' + urllib.urlencode(headers)
             except:
-                url =  r = jsunpack.unpack(r)
-                url = url.replace('"', '')              
-
+                try:
+                    url =  r = jsunpack.unpack(r)
+                    url = url.replace('"', '')
+                except:
+                    url = re.findall(r'sources[\'"]\s*:\s*\[.*?file[\'"]\s*:\s*(\w+)\(\).*function\s+\1\(\)\s*\{\s*return\([\'"]([^\'"]+)',r,re.DOTALL)[0][1]
 
             sources.append({'source': 'cdn', 'quality': quality, 'language': 'en', 'url': url, 'direct': True, 'debridonly': False, 'autoplay': True})
 
@@ -163,3 +166,5 @@ class source:
 
     def resolve(self, url):
         return url
+
+
