@@ -105,6 +105,7 @@
         <setting id="provider.ymovies" type="bool" label="YMOVIES" default="true" />
         <setting label="German" type="lsep" />
         <setting id="provider.1kino" type="bool" label="1KINO" default="true" />
+        <setting id="provider.alluc" type="bool" label="ALLUC" default="true" />
         <setting id="provider.animebase" type="bool" label="ANIMEBASE" default="true" />
         <setting id="provider.animeloads" type="bool" label="ANIMELOADS" default="true" />
         <setting id="provider.bs" type="bool" label="BS" default="true" />
