@@ -1,8 +1,15 @@
+[B]1.1.10[/B]
+- fixed kingmovies
+- removed pmovies and watch5s
+- streamflix url fix
+- fixed streamlord
+- changed fanarttv search behavior to execute also without personal api key
+
 [B]1.1.9[/B]
 - updated streamflix url
 - set default action to Directory
 - added gostream source
-- added container refreshs to syncronise watched status with Trakt (thanks to rw86)
+- added container refreshs to syncronize watched status with Trakt (thanks to rw86)
 
 [B]1.1.8[/B]
 - CF fix (thanks to gujal)
@@ -22,7 +29,7 @@
 - Dayt update
 - Onseries bug fix
 - Allow users to hide  movies currently in theaters (released within the last 90 days), 
-except in the following sections: Trakt/IMDB Lists, In Theatres, Search
+  except in the following sections: Trakt/IMDB Lists, In Theatres, Search
 
 [B]1.1.4[/B]
 - Kingmovies fix
